# planitia

./: .gitignore  Cargo.toml  HOUDINI_VEX.md  Makefile.toml  NOTES.md  rustfmt.toml  shaders.schema.json
crates/color/: Cargo.toml
crates/color/src/: lib.rs
crates/game/: Cargo.toml  TODO  build.rs
crates/game/assets/shaders/: automaton.slang  background.slang  bindless.slang  coat_rendering.slang  common.slang  contour_edge_sort.slang  egui.slang  geometry.slang  grid.slang  lines.slang  options.txt  outline.slang  paint.json  pipelines.json  polygons.slang  ridge_detection.slang  scene_info.slang  shaders.toml  shared.slang  winged_edge.slang
crates/game/shaders/: bindless.slang  egui.slang  grid.slang  lines.slang  paint.json  paint.slang  paint_glyphs.slang
crates/game/src/: camera_control.rs  context.rs  event.rs  input.rs  main.rs  pipeline_cache.rs  pipeline_editor.rs  script.rs  task.rs  util.rs
crates/game/src/asset/: local_provider.rs  mod.rs  vfs_path.rs
crates/game/src/experiments/: automaton.rs  coat.rs  dcel.rs  lines.rs  mod.rs  outlines.rs  ss_contours.rs  sweep.rs  winged_edge_mesh.rs
crates/game/src/imgui/: curve.rs  egui_backend.rs  icon_button.rs  input_state.rs  mod.rs  popup_button.rs
crates/game/src/paint/: atlas.rs  color.rs  mod.rs  scene.rs  shape.rs  tessellation.rs  text.rs
crates/game/src/paint/text/: font.rs  format.rs  glyph_cache.rs  layout.rs  mod.rs  text_run.rs
crates/game/src/platform/: mod.rs
crates/game/src/platform/windows/: compositor_clock.rs  event_loop.rs  graphics.rs  key_code.rs  mod.rs  swap_chain.rs  window.rs
crates/game/src/shaders/: mod.rs
crates/gamelib/: Cargo.toml  TODO  build.rs
crates/gamelib/assets/gamelib/shaders/: egui.slang  paint.slang  pipelines.json  shaders.toml
crates/gamelib/src/: camera_control.rs  component.rs  context.rs  executor.rs  input.rs  lib.rs  notifier.rs  pipeline_cache.rs  render_world.rs  timer.rs  tweak.rs  util.rs  worksheet.rs  world.rs
crates/gamelib/src/asset/: local_provider.rs  mod.rs  vfs_path.rs
crates/gamelib/src/imgui/: curve.rs  egui_backend.rs  input_state.rs  mod.rs
crates/gamelib/src/paint/: atlas.rs  fill.rs  mod.rs  path.rs  shape.rs  tessellation.rs
crates/gamelib/src/paint/text/: format.rs  glyph_cache.rs  mod.rs
crates/gamelib/src/platform/: mod.rs
crates/gamelib/src/platform/windows/: compositor_clock.rs  event_loop.rs  graphics.rs  key_code.rs  mod.rs  swap_chain.rs  window.rs
crates/gamelib/src/render/: mod.rs  pipeline_cache.rs  reflection.rs  render_world.rs  technique.rs  util.rs  workbench.rs
crates/gamelib/src/shaders/: mod.rs
crates/geom/: Cargo.toml
crates/geom/src/: coat.rs  coating.rs  lib.rs  mesh.rs
crates/geomtool/: Cargo.toml
crates/geomtool/src/: main.rs
crates/geomtool/src/coating/: mod.rs
crates/geomtool/src/convert/: mod.rs
crates/geomtool/src/houdini/: error.rs  mod.rs  parser.rs
crates/geomtool/src/houdini/parser/: binary.rs  json.rs
crates/geomtool/src/terrain/: mod.rs  triangulation.rs
crates/gpu/: Cargo.toml
crates/gpu-macros/: Cargo.toml
crates/gpu-macros/src/: attachments.rs  lib.rs  vertex.rs
crates/gpu/examples/: copy_image.rs
crates/gpu/gpu-macros/src/: vertex.rs
crates/gpu/src/: buffer.rs  command.rs  device.rs  image.rs  instance.rs  lib.rs  surface.rs  swapchain.rs  types.rs
crates/gpu/src/command/: blit.rs  compute.rs  render.rs
crates/gpu/src/device/: bindless.rs  descriptor_heap.rs  upload_buffer.rs
crates/gpu/src/platform/: mod.rs  windows.rs
crates/gpu/src/util/: command.rs  device.rs  mod.rs  push_buffer.rs  upload_buffer.rs
crates/graveyard/: pipeline_archive.fbs  pipeline_archive.rs  pipeline_archive_generated.rs
crates/hgeo/: Cargo.toml
crates/hgeo/src/: error.rs  lib.rs  parser.rs  util.rs
crates/hgeo/src/parser/: binary.rs  json.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/math/src/geom/: bezier.rs  camera.rs  mod.rs  rect.rs  util.rs
crates/pipeline-archive/: Cargo.toml
crates/pipeline-archive/src/: lib.rs
crates/pipeline-build-lib/: Cargo.toml
crates/pipeline-build-lib/src/: build.rs  lib.rs  manifest.rs
crates/pipeline-build-tool/: Cargo.toml
crates/pipeline-build-tool/src/: editor.rs  main.rs
crates/shader-archive/: Cargo.toml
crates/shader-archive/src/: lib.rs  reflection.rs
crates/shader-bridge/: Cargo.toml
crates/shader-bridge/src/: embed_shaders.rs  error.rs  lib.rs  library.rs  rustfmt.rs  session.rs  syntax_bindgen.rs
crates/shadertool/: Cargo.toml
crates/shadertool/html/: index.html  styles.css
crates/shadertool/src/: build.rs  lib.rs  manifest.rs  reflection.rs
crates/sharc/: Cargo.toml
crates/sharc/src/: lib.rs  reflection.rs
crates/terrain-file/: Cargo.toml
crates/terrain-file/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: aligned_zst.rs  archive.rs  lib.rs  zstring.rs
