[workspace]
members = [
    "crates/gpu",
    "crates/gpu-macros",
    "crates/game",
    "crates/math",
    "crates/shader-bridge",
    "crates/pipeline-archive",
    "crates/utils",
    "crates/pipeline-build-tool",
    "crates/pipeline-build-lib",
    "crates/color",
    "crates/geomtool",
    "crates/terrain-file"]
resolver = "2"

[workspace.dependencies]
gpu = { path = "crates/gpu" }
gpu-macros = { path = "crates/gpu-macros" }
shader-bridge = { path = "crates/shader-bridge" }
game = { path = "crates/game" }
math = { path = "crates/math" }
utils = { path = "crates/utils" }
pipeline-archive = { path = "crates/pipeline-archive" }
pipeline-build-lib = { path = "crates/pipeline-build-lib" }
color = { path = "crates/color" }
geomtool = { path = "crates/geomtool" }
terrain-file = { path = "crates/terrain-file" }

[profile.release]
debug = true

