[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
gamelib = { workspace = true }
gpu = { workspace = true }
math = { workspace = true }
color = { workspace = true, features = ["gpu-support"] }
utils = { workspace = true }
log = "0.4.28"
egui_demo_lib = "0.32.1"

[build-dependencies]
shadertool = { workspace = true }

[features]
hot_reload = ["gamelib/hot_reload"]