[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
gamelib = { workspace = true }
gpu = { workspace = true }
math = { workspace = true }
geom = { workspace = true }
color = { workspace = true, features = ["gpu-support"] }
utils = { workspace = true }
log = "0.4.28"
egui_demo_lib = "0.32.1"
rfd = "0.16.0"
hgeo = { workspace = true }
smallvec = "2.0.0-alpha.12"
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12"
bytesize = "2.3.1"

[build-dependencies]
shadertool = { workspace = true }

[features]
hot_reload = ["gamelib/hot_reload"]