[package]
name = "pipeline-build-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
wry = { version =  "0.53.4" }
winit = "0.30.12"
include_dir = "0.7.4"
log = "0.4.28"
pretty_env_logger = "0.5.0"
shader-bridge = { workspace = true }
pipeline-archive = { workspace = true }
serde_json = "1.0.145"
thiserror = "2.0.17"
clap = { version = "4.5.50", features = ["derive"] }
pipeline-build-lib = { workspace = true }